--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,8 @@ html, body {
 .wrapper {
 	min-height: 100%;
 	position: relative;
-	/*background: url('../images/background.jpg');*/
+	/*background: url('../images/background.jpg');
+	filter: blur(5px);*/
 	background-color: white;
 }
 
@@ -26,7 +27,6 @@ html, body {
 }
 
 .container.c-content {
-	background-color: white;
 	padding: 0 0 0.1px 0!important;
 	width: 100%;
 	min-height: 100%;
@@ -65,6 +65,24 @@ a {
 	position: absolute;
 	width: fit-content;
 	bottom: 50px;
+}
+
+.footer-social-media {
+	height: 45px;
+	width: 200px;
+	float: right;
+	margin-top: 70px;
+}
+
+.footer-social-media > img {
+	width: 35px;
+	filter: invert(100%);
+}
+
+.footer-social-media > img:hover {
+	filter: invert(50%);
+	cursor: pointer;
+	transition: all .2s;
 }
 
 .footer-info > p {
